# sealproxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  config.yml
.github/workflows/: docker-publish.yml  rust.yml
src/: config.rs  filters.rs  logging.rs  main.rs  path_match.rs  session.rs  state.rs  target.rs  tls.rs  upgrade.rs  userbase.rs
src/filters/: anonymous.rs  basic.rs  cookie_session.rs  form_login.rs  redirect.rs
src/userbase/: ldap.rs  userpass.rs
