[package]
name = "sealproxy"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = { version = "0.14.11", features = ["server", "http1", "http2", "runtime", "tcp", "stream", "client"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_yaml = "0.8.17"
tokio = { version = "1.9.0", features = ["full"] }
anyhow = "1.0.42"
url = { version = "2.2.2", features = ["serde"] }
tracing = { version = "0.1.26", features = ["attributes"] }
tracing-log = "0.1.2"
tracing-subscriber = "0.2.20"
uuid = { version = "0.8.2", features = ["v4"] }
async-trait = "0.1.51"
arc-swap = "1.3.0"
once_cell = "1.8.0"
base64 = "0.13.0"
cookie = "0.15.1"
jsonwebtoken = "7.2.0"
time = "0.2"
route-recognizer = "0.3.0"
serde_urlencoded = "0.7.0"
clap = "2.33.3"
tls-listener = { version = "0.2.1", features = ["hyper-h1", "hyper-h2"] }
rustls = "0.19.1"
rustls-pemfile = "0.2.1"
tokio-rustls = "0.22.0"
dotenv = "0.15.0"
futures-util = "0.3.17"
colored = "2.0.0"
chrono = "0.4.19"
inotify = { version = "0.9.3", features = ["stream"] }
mime = "0.3.16"
